envoy-auth/templates/filter/envoy-token-filter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: jwt-authorization-filter
  namespace: istio-system
spec:
  configPatches:
    - applyTo: HTTP_FILTER
      match:
        context: GATEWAY
        listener:
          filterChain:
            filter:
              name: "envoy.http_connection_manager"
      patch:
        operation: INSERT_BEFORE
        value:
          name: envoy.filters.http.lua
          typed_config:
            "@type": "type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua"
            inlineCode: |
              function envoy_on_request(request_handle)
                local headers, _ = request_handle:httpCall(
                "outbound|8001||auth-service",
                {
                  [":method"] = "GET",
                  [":path"] = "/.well-known/jwks.json",
                  [":authority"] = "auth-service"
                },
                "",
                5000)
                local user_claim = headers["user-claim"]
                request_handle:headers():add("user-claim", user_claim)
              end
